[DURACOM-195] fix spacing in collapsible menu
(cherry picked from commit a88282d70b8677712d5515ca697c46276840e774)

--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -39,6 +39,7 @@
   --ds-expandable-navbar-link-color: #{$body-color};
   --ds-expandable-navbar-link-color-hover: #{$body-color};
   --ds-expandable-navbar-link-background-hover: #{$ds-navbar-link-color-hover};
+  --ds-expandable-navbar-item-vertical-padding: 0.25rem;
 
   --ds-user-menu-item-vertical-padding: 0.25rem;
   --ds-user-menu-dropdown-padding: 1rem;
